fix: remove visual flicker in select dropdown

--- a/src/code-blocks/components/ChoiceGroup.css
+++ b/src/code-blocks/components/ChoiceGroup.css
@@ -16,6 +16,7 @@
 
   .choice-select {
     background: #eee;
+    height: var(--option-height);
     font-size: 13.3333px;
 
     -webkit-user-select: none; /* Safari */
@@ -30,6 +31,7 @@
 
   .choice-select__list {
     position: relative;
+    top: 0;
     border-radius: 5px;
     border-color: var(--border-color);
     width: 100%;
@@ -39,6 +41,7 @@
 
   .choice-select__option {
     display: flex;
+    height: var(--option-height);
     white-space: nowrap;
     align-items: center;
     flex-wrap: nowrap;
@@ -113,6 +116,28 @@
 
   .hidden {
     display: none !important;
+  }
+
+  .choice-select:has(.choice-select__option:nth-of-type(1) .choice-select__radio:checked) .choice-select__list {
+    top: calc(0 * var(--option-height));
+  }
+  .choice-select:has(.choice-select__option:nth-of-type(2) .choice-select__radio:checked) .choice-select__list {
+    top: calc(-1 * var(--option-height));
+  }
+  .choice-select:has(.choice-select__option:nth-of-type(3) .choice-select__radio:checked) .choice-select__list {
+    top: calc(-2 * var(--option-height));
+  }
+  .choice-select:has(.choice-select__option:nth-of-type(4) .choice-select__radio:checked) .choice-select__list {
+    top: calc(-3 * var(--option-height));
+  }
+  .choice-select:has(.choice-select__option:nth-of-type(5) .choice-select__radio:checked) .choice-select__list {
+    top: calc(-4 * var(--option-height));
+  }
+  .choice-select:has(.choice-select__option:nth-of-type(6) .choice-select__radio:checked) .choice-select__list {
+    top: calc(-5 * var(--option-height));
+  }
+  .choice-select:has(.choice-select__option:nth-of-type(7) .choice-select__radio:checked) .choice-select__list {
+    top: calc(-6 * var(--option-height));
   }
 }
 
